# rag-chatbot-streamlit

./: .gitignore  app.py  chunker.py  document_manager.py  embedding_model.py  faiss.index  faiss_all_MiniLM_L6_v2_384.index  faiss_all_MiniLM_L6_v2_384.index.ids  faiss_all_mpnet_base_v2_768.index  faiss_metadata.json  file_utils.py  llm_api.py  main.py  main_chat.py  pyproject.toml  rag_pipeline.py  rag_prompt.py  rag_utils.py  requirements.txt  test_api_mistral.py
Files/: desktop.ini  output.csv
chat/: chat_loop.py  interface.py
chroma_db/: chroma.sqlite3
chroma_storage/: chroma.sqlite3
vector_db/: __init__.py  chroma_db.py  faiss_db.py  pinecone_db.py
