[project]
name = "universal-vector-db-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishi",email = "rishivishal96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pymupdf (>=1.26.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pinecone >=3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
